--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
